# morph-tool

./: Cargo.toml  coverage.json  version.json5
examples/: example.geno
src/: ast.rs  error.rs  geno.pest  lib.rs
tests/: geno.rs
