[package]
name = "geno"
version = "0.1.0"
edition = "2024"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]

readme = "README.md"
description = "A cross-language schema compiler that generates type definitions and serialization code from a simple, declarative schema language."
repository = "https://github.com/jlyonsmith/geno.git"

keywords = ["schema", "network", "language"]
categories = ["command-line-utilities", "development-tools"]

license = "Unlicense"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
which = "8.0.0"
rmp-serde = "1.3.1"
duct = "1.1.1"
num-traits = "0.2.19"

[[bin]]
name = "geno"
path = "src/bin/geno.rs"

[[bin]]
name = "geno-rust-serde"
path = "src/bin/geno_rust_serde.rs"

[[bin]]
name = "geno-dart-mp"
path = "src/bin/geno_dart_mp.rs"
